--- a/views/room.ejs
+++ b/views/room.ejs
@@ -12,7 +12,7 @@
     ></script>
 
     <script src="/socket.io/socket.io.js" defer></script>
-    <script src="script.js" defer></script>
+    <script src="/script.js" defer></script>
     <title>Document</title>
     <style>
       #video-grid {
